force-app/main/default/objects/LLC_BI__Remote_Deposit_Capture_Service__c/LLC_BI__Remote_Deposit_Capture_Service__c.object-meta.xml
<CustomObject>
    <description>This object is ancillary with a one-to-one lookup with the Treasury object and is used to store fields specific to remote deposit capture services.</description>
    <label>Remote Deposit Capture Service</label>
    <nameField>
        <displayFormat>RD-{000000000}</displayFormat>
        <label>Remote Deposit  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Remote Deposit Capture Service</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>