force-app/main/default/objects/LLC_BI__Remote_Deposit_Capture_Service__c/fields/LLC_BI__Number_of_Locations__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Number_of_Locations__c</fullName>
    <label>Number of Locations</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>