force-app/main/default/objects/LLC_BI__Remote_Deposit_Capture_Service__c/fields/LLC_BI__Remote_Deposit_Capture__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Remote_Deposit_Capture__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remote Deposit Capture</label>
    <type>Checkbox</type>
</CustomField>